; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_url.c_strcmp_wa.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_url.c_strcmp_wa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @strcmp_wa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @strcmp_wa(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32* @a2w(i8* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @lstrcmpW(i32* %9, i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = call i32 (...) @GetProcessHeap()
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @HeapFree(i32 %12, i32 0, i32* %13)
  %15 = load i32, i32* %6, align 4
  ret i32 %15
}

declare dso_local i32* @a2w(i8*) #1

declare dso_local i32 @lstrcmpW(i32*, i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
